syntax = "proto3";

option csharp_namespace = "PersonService";

package person;

service PersonManager {
	rpc AddPerson(AddPersonRequest) returns (AddPersonResponse);
}

message AddPersonRequest{
	Person person = 1;
}

message AddPersonResponse{
	Status status = 1;	

	enum Status{
		SUCCESS = 0;
		ERROR = 1;
	}
}

message Person {
	string name = 1;
	string cnp = 2;
}